[package]
name = "rs-network-stack"
version = "0.1.0"
authors = ["Esa Varemo <esa@kuivanto.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network_bridge = "0.1.1"
tun-tap = "0.1.2"
nix = "0.19.0"
libc = "0.2.80"
netdevice = "0.1.1"
byteorder = "1.3.4"